--- a/ff_compile/src/main/resources/miyako.properties
+++ b/ff_compile/src/main/resources/miyako.properties
@@ -8,16 +8,8 @@ html=\
 	<meta charset="utf-8">\
 	<title>\u9119\u306e\u59eb\u3001\u5bae\u51e6\u306e\u5deb\u5973\u3001\u4f59\u6240\u8005\u306e\u5ac1 {title}</title>\
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">\
-	<script src="../jquery-1.6.2.min.js"></script>\
-	<script src="../jquery-cookie.js"></script>\
+	<script src="../flowerflower/load.js"></script>\
     <link rel="stylesheet" href="../tsume/tsume.css">\
-	<script src="../tsume/tsume.js"></script>\
-	<script src="../flowerflower/restore_scroll.js"></script>\
-	<script src="../design/design.js"></script>\
-    <script src="../android/ruby_fix.js"></script>\
-    <script src="../meiryo/meiryo_fix.js"></script>\
-    <script src="../design/insert_app_badge.js"></script>\
-	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" media="screen" />\
 <!--[if IE 8]>\
 	<link rel="stylesheet" href="../design/design_ie8.css" />\
@@ -34,7 +26,6 @@ html=\
 	if (window.ff) ; else window.ff = new Object();\
 	window.ff.StartSid = "{startSid}";\
 	</script>\
-    <script src="/ga.js"></script>\
 </head>\
 <body>\
 	<div id="full_box">\
@@ -93,14 +84,8 @@ latest_separation_html=\
 	<meta charset="utf-8">\
 	<title>\u9119\u306e\u59eb\u3001\u5bae\u51e6\u306e\u5deb\u5973\u3001\u4f59\u6240\u8005\u306e\u5ac1 {title} {yyyy}\u5e74{MM}\u6708{dd}\u65e5\u914d\u4fe1</title>\
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=10.0, minimum-scale=1, user-scalable=1">\
-	<script src="../jquery-1.6.2.min.js"></script>\
+	<script src="../flowerflower/load.js"></script>\
     <link rel="stylesheet" href="../tsume/tsume.css">\
-	<script src="../tsume/tsume.js"></script>\
-	<script src="../design/design.js"></script>\
-    <script src="../android/ruby_fix.js"></script>\
-    <script src="../meiryo/meiryo_fix.js"></script>\
-    <script src="../design/insert_app_badge.js"></script>\
-	<script src="../flowerflower/fire_content_updated.js"></script>\
 	<link rel="stylesheet" href="../design/design.css" />\
 <!--[if IE 8]>\
 	<link rel="stylesheet" href="../design/design_ie8.css" />\
@@ -110,7 +95,6 @@ latest_separation_html=\
 	window.ff.CharacterNoteElement = '<a href="character_note.html">';\
 	window.ff.StartSid = "{startSid}";\
 	</script>\
-    <script src="/ga.js"></script>\
 </head>\
 <body>\
 	<div id="full_box">\
