--- a/ff_ios2/ff_ios2/ff_ios2-Info.plist
+++ b/ff_ios2/ff_ios2/ff_ios2-Info.plist
@@ -22,7 +22,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>org.kaoriha.flowerflower.ff-ios2</string>
+	<string>org.kaoriha.flowerflower.ffios2-2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
