--- a/ff_ios2/ff_ios2/TitleInfos.plist
+++ b/ff_ios2/ff_ios2/TitleInfos.plist
@@ -26,7 +26,7 @@
 			<key>type</key>
 			<string>flowerflower</string>
 			<key>productId</key>
-			<string>org.kaoriha.miyako</string>
+			<string>org.kaoriha.flowerflower.ffios22.miyako</string>
 			<key>distributionUrl</key>
 			<string>http://kaoriha.org/miyako/</string>
 		</dict>
@@ -52,7 +52,7 @@
 			<key>type</key>
 			<string>fixedInApp</string>
 			<key>productId</key>
-			<string>org.kaoriha.kanzenhitogata</string>
+			<string>org.kaoriha.flowerflower.ffios22.kanzenhitogata</string>
 			<key>distributionUrl</key>
 			<string>http://kaoriha.org/kanzenhitogata/</string>
 		</dict>
@@ -78,7 +78,7 @@
 			<key>type</key>
 			<string>fixedInApp</string>
 			<key>productId</key>
-			<string>org.kaoriha.kouchabutton</string>
+			<string>org.kaoriha.flowerflower.ffios22.kouchabutton</string>
 			<key>distributionUrl</key>
 			<string>http://kaoriha.org/kouchabutton/</string>
 		</dict>
